--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.auth0:java-jwt:3.18.2'
+	compile 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 tasks.named('test') {
