--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=trade
+
+# 데이터베이스 연결 설정
+spring.datasource.url=jdbc:postgresql://193.123.249.35:5432/postgres
+spring.datasource.username=krw
+spring.datasource.password=krw1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+test.value=HNmh7Whwa4aLNVPhbh22xyZy1u7O5xKI9kiHTWVV
+test.value2=eDV8hocqOjLt8BrkDF5EPMp7X8gjpRNpvvCZWzQ9
