--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
+    }
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -32,9 +38,10 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.auth0:java-jwt:3.18.2'
-	compile 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.google.code.gson:gson:2.8.9'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 tasks.named('test') {
